[package]
name = "rplace"
version = "0.1.0"
edition = "2021"
default-run = "rplace"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3"
csv = "1.1"
floydrivest = "0.2"
image = "0.24"
itertools = "0.10"
log = "0.4"
libm = "0.2"
memmap = "0.7"
min-max = "0.1"
num = "0.4"
parquet = "26.0"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
speedy2d = "1.8.0"
strum = "0.24"
strum_macros = "0.24"
time = { version = "0.3.16", features = ["macros", "parsing", "serde"] }
